# MdToOther

./: .gitignore  Status Migrazione.xlsx  filterExcelFile.py  requirements.txt
Documentazione/: documentazione.py  pyproject.toml
Documentazione/Counterpart/: counterpart.md
Documentazione/Plant/: plant.md
Documentazione/ProjectTask/: project_task.md
Documentazione/src/: utils.py  (+3 more)
javaToPuml/: java_to_puml.py
mdAndPumlToDocx/: pyproject.toml
mdAndPumlToDocx/Counterpart/: counterpart.md
mdAndPumlToDocx/Counterpart/snippets/: delete_v1_counterparts_id.puml  get_v1_counterparts_id.puml  patch_v1_counterparts_id.puml  post_v1_counterparts_create.puml  post_v1_counterparts_import.puml
mdAndPumlToDocx/Counterpart/snippets/extra/: counterpart_api_routes.puml  counterpart_component_diagram.puml  counterpart_dto_ovreview.puml
mdAndPumlToDocx/Plant/snippets/: patch_v1_plants_id.puml  post_v1_plants_search.puml
mdAndPumlToDocx/Plant/snippets/extra/: plant_component_diagram.puml
mdAndPumlToDocx/ProjectTask/: project_task.md
mdAndPumlToDocx/ProjectTask/snippets/: delete_v1_projects_projectId.puml  get_v1_projects_projectId.puml  get_v1_projects_projectId_tasks.puml  patch_v1_projects_multi.puml  patch_v1_projects_projectId.puml  patch_v1_projects_projectId_tasks_bulk.puml  patch_v1_projects_projectId_tasks_multi.puml  post_v1_projects_create.puml  post_v1_projects_projectId_tasks.puml  post_v1_projects_search.puml
mdAndPumlToDocx/src/: installpackages.py  managepuml.py
mdToXlsx/: Status Migrazione.xlsx  Status Migrazione_21_11_25.xlsx  readMe.md  status.py
(+23 files in other folders)
